--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'ohtu.ohtuvarasto.main.Main'
+        attributes 'Main-Class': 'ohtu.main.Main'
     }
 }
 
@@ -49,5 +49,5 @@ jacocoTestReport {
 }
 
 // Define the main class for the application
-mainClassName = 'ohtu.ohtuvarasto.main.Main'
+mainClassName = 'ohtu.main.Main'
 
